# vdesktop

./: .gitignore  README.md  components.d.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: main.yml  publish-image.yml  test.yml
.history/src-tauri/: Cargo_20221104155547.toml  Cargo_20221104160434.toml  Cargo_20221104160436.toml  Cargo_20221104160438.toml  Cargo_20221104160445.toml  Cargo_20221104160447.toml
.history/src-tauri/src/: main_20221104140158.rs  main_20221104154323.rs  main_20221104154328.rs  main_20221104154330.rs  main_20221104154332.rs  main_20221104154335.rs  main_20221104154340.rs  main_20221104154344.rs  main_20221104154927.rs  main_20221104154936.rs  main_20221104154942.rs  main_20221104154943.rs  main_20221104154947.rs  main_20221104154951.rs  main_20221104154953.rs  main_20221104155006.rs  main_20221104155045.rs  main_20221104155046.rs  main_20221104155048.rs  main_20221104155049.rs  main_20221104155100.rs  main_20221104155103.rs  main_20221104155105.rs  (+120 more)
.nova/: Configuration.json
scripts/: portable.mjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  vd.command
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  vd.rs
src-tauri/src/core/: api.rs  config.rs  mod.rs  model.rs  vd.rs
src-tauri/src/utils/: error.rs
src/api/: index.ts
src/assets/: worker.js
src/config/: piniaPersist.ts  serviceLoading.ts
src/routers/: index.ts  router.ts
src/store/: index.ts
src/types/: vm.ts
src/typings/: plugins.d.ts
src/utils/: util.ts
(+539 files in other folders)
