[package]
name = "vdesktop"
version = "1.5.3"
description = "A virtual desktop application for Windows, macOS, and Linux."
authors = ["whitek"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all"] }
dirs = "5.0.1"
serde_yaml = "0.9.14"
serde_with = "3.4.0"
thiserror = "1.0.37"
log = "*"
json = "*"
subprocess = "*"
reqwest = { version = "*", features = ["blocking", "json"] }
anyhow = "1.0.66"
defer = "*"
registry = "1.2.3"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
tokio = { version = "1.41.0", features = ["full"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
